whitespace css fix

--- a/uiElements/style.css
+++ b/uiElements/style.css
@@ -1,12 +1,13 @@
 #capture-button {
-position: absolute;
-background-color: #FFF;
-border: 0.5px solid #D8D7D5;
-border-radius: 100%;
-box-sizing: border-box;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-z-index: 2147483644;
-padding: 0px 6px;
+  position: absolute;
+  background-color: #FFF;
+  border: 0.5px solid #D8D7D5;
+  border-radius: 100%;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 2147483644;
+  padding: 0px 6px;
+  white-space: normal;
 }
 
 #capture-button-image {
@@ -30,6 +31,7 @@ padding: 0px 6px;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2px; padding: 4px;
+  white-space: normal;
 }
 
 .capture-comment-popup-input, #capture-tag-box-input {
